--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     implementation "androidx.cardview:cardview:1.0.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    //room DB lib
+    def room_version = "2.4.2"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
